AirSyncAccount.java: Use URI and convert to URL in getBytes